# backend/src/cortexdj/routers/__init__.py
@@ -1,7 +1,15 @@
 from cortexdj.routers.agent import agent_router
 from cortexdj.routers.health import health_router
+from cortexdj.routers.retrieval import retrieval_router
 from cortexdj.routers.sessions import sessions_router
 from cortexdj.routers.spotify_auth import spotify_auth_router
 from cortexdj.routers.thread import thread_router
 
-__all__ = ["agent_router", "health_router", "sessions_router", "spotify_auth_router", "thread_router"]
+__all__ = [
+    "agent_router",
+    "health_router",
+    "retrieval_router",
+    "sessions_router",
+    "spotify_auth_router",
+    "thread_router",
+]
